--- a/src/main/resources/com/example/demo/Journey_Details.fxml
+++ b/src/main/resources/com/example/demo/Journey_Details.fxml
@@ -1,14 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Journey_Details">
+   <top>
+      <AnchorPane prefHeight="69.0" prefWidth="550.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" layoutX="182.0" layoutY="19.0" prefHeight="18.0" prefWidth="186.0" text="Journery Details" textFill="#991b1b">
+               <font>
+                  <Font name="System Bold" size="22.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </top>
+   <left>
+      <AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: orange;" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="149.0" layoutY="40.0" prefHeight="18.0" prefWidth="89.0" text="From :">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="149.0" layoutY="95.0" text="To :">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <DatePicker fx:id="DateLabel" layoutX="219.0" layoutY="157.0" onAction="#getDate" prefHeight="26.0" prefWidth="156.0" promptText="Date" />
+            <Label layoutX="147.0" layoutY="156.0" prefHeight="27.0" prefWidth="64.0" text="Date :">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="FromLabel" layoutX="220.0" layoutY="41.0" promptText="From" />
+            <TextField fx:id="ToLabel" layoutX="220.0" layoutY="96.0" promptText="To" />
+            <Button fx:id="BackButton" layoutX="38.0" layoutY="283.0" mnemonicParsing="false" onAction="#backButtonOnAction" prefHeight="26.0" prefWidth="66.0" text="Back" />
+            <Button fx:id="nextButton" layoutX="479.0" layoutY="277.0" mnemonicParsing="false" onAction="#nextButtonOnAction" prefHeight="26.0" prefWidth="69.0" text="Next" />
+            <Label fx:id="nodetailsLabel" layoutX="190.0" layoutY="14.0" prefHeight="18.0" prefWidth="138.0" />
+            <Label layoutX="80.0" layoutY="210.0" prefHeight="27.0" prefWidth="110.0" text="No of tickets :">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="nooftickets" layoutX="220.0" layoutY="211.0" prefHeight="26.0" prefWidth="159.0" promptText="no of tickets" />
+         </children>
+      </AnchorPane>
+   </left>
+</BorderPane>
