--- a/src/main/resources/com/example/demo/Signup.fxml
+++ b/src/main/resources/com/example/demo/Signup.fxml
@@ -1,14 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.Signup">
+   <left>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: navy blue;" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" layoutX="58.0" layoutY="200.0" prefHeight="35.0" prefWidth="101.0" text="AIRLINE" textFill="#cf9309">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="84.0" layoutY="139.0" text="TO" textFill="#cf9309">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="53.0" layoutY="104.0" text="WELCOME" textFill="#cf9309">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="57.0" layoutY="233.0" text="BOOKING" textFill="#cf9309">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Line endX="100.0" layoutX="100.0" layoutY="183.0" startX="-100.0" stroke="#d11313" />
+         </children></AnchorPane>
+   </left>
+   <right>
+      <AnchorPane prefHeight="400.0" prefWidth="469.0" style="-fx-background-color: pink;" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="59.0" layoutY="80.0" prefHeight="35.0" prefWidth="123.0" text="Firstname :">
+               <font>
+                  <Font size="24.0" />
+               </font></Label>
+            <Label layoutX="60.0" layoutY="130.0" prefHeight="18.0" prefWidth="120.0" text="Lastname :">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="59.0" layoutY="182.0" prefHeight="35.0" prefWidth="143.0" text="Username :">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Label layoutX="56.0" layoutY="230.0" prefHeight="35.0" prefWidth="130.0" text="Password :">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <TextField fx:id="LastnameTextField" layoutX="194.0" layoutY="135.0" promptText="lastname" />
+            <TextField fx:id="UsernameTextField" layoutX="194.0" layoutY="187.0" promptText="Username" />
+            <PasswordField fx:id="PasswordField" layoutX="194.0" layoutY="235.0" promptText="password" />
+            <TextField fx:id="FirstnameTextField" layoutX="194.0" layoutY="85.0" promptText="firstname" />
+            <Button fx:id="SignupButton" layoutX="165.0" layoutY="281.0" mnemonicParsing="false" onAction="#SignupButtonOnAction" prefHeight="30.0" prefWidth="75.0" text="Signup">
+               <font>
+                  <Font size="14.0" />
+               </font></Button>
+            <Label alignment="CENTER" layoutX="136.0" layoutY="21.0" prefHeight="18.0" prefWidth="114.0" text="Sign Up" textFill="#e40e0e">
+               <font>
+                  <Font name="Arial Bold" size="24.0" />
+               </font>
+            </Label>
+            <Label fx:id="MessageLabel" alignment="CENTER" layoutX="102.0" layoutY="61.0" prefHeight="18.0" prefWidth="182.0" textFill="#f40909" />
+            <Label layoutX="120.0" layoutY="323.0" prefHeight="18.0" prefWidth="102.0" text="Go back to Login ?" textFill="#ef8009" />
+            <Button fx:id="LoginButton" alignment="TOP_LEFT" layoutX="223.0" layoutY="319.0" mnemonicParsing="false" onAction="#LoginButtonOnAction" prefHeight="26.0" prefWidth="53.0" style="-fx-background-color: pink;" text="Login" textFill="#b16149fa">
+               <font>
+                  <Font name="Arial Black" size="12.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+   </right>
+</BorderPane>
