--- a/src/main/resources/com/example/demo/page.fxml
+++ b/src/main/resources/com/example/demo/page.fxml
@@ -1,14 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
-</AnchorPane>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.HelloController">
+   <top>
+      <AnchorPane prefHeight="71.0" prefWidth="600.0" style="-fx-background-color: yellow;" BorderPane.alignment="CENTER">
+         <children>
+            <Label alignment="CENTER" layoutX="117.0" layoutY="25.0" prefHeight="35.0" prefWidth="384.0" text="WELCOME TO AIRLINE BOOKING" textFill="#234b9e">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </top>
+   <left>
+      <AnchorPane prefHeight="326.0" prefWidth="599.0" style="-fx-background-color: orange;" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="145.0" layoutY="90.0" prefHeight="18.0" prefWidth="109.0" text="Name :">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="145.0" layoutY="141.0" prefHeight="18.0" prefWidth="109.0" text="Age    :">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label layoutX="145.0" layoutY="196.0" prefHeight="27.0" prefWidth="95.0" text="Phone no :">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="202.0" layoutY="14.0" prefHeight="31.0" prefWidth="210.0" text="Costomer Details" textFill="#872b33">
+               <font>
+                  <Font name="Georgia Bold Italic" size="22.0" />
+               </font>
+            </Label>
+            <TextField fx:id="NameTextField" layoutX="240.0" layoutY="90.0" prefHeight="26.0" prefWidth="187.0" promptText="name" />
+            <TextField fx:id="AgeTextField" layoutX="240.0" layoutY="141.0" onAction="#backButtonOnAction" prefHeight="26.0" prefWidth="187.0" promptText="age" />
+            <TextField fx:id="PhonenoTextField" layoutX="240.0" layoutY="196.0" prefHeight="26.0" prefWidth="187.0" promptText="phone no" />
+            <Button fx:id="backButton" layoutX="21.0" layoutY="272.0" mnemonicParsing="false" onAction="#backButtonOnAction" prefHeight="26.0" prefWidth="66.0" text="Back" />
+            <Label fx:id="DetailsLabel" alignment="CENTER" layoutX="183.0" layoutY="58.0" prefHeight="18.0" prefWidth="176.0" textFill="#c10e0e">
+               <font>
+                  <Font size="14.0" />
+               </font></Label>
+            <Button fx:id="nextButton" layoutX="476.0" layoutY="265.0" mnemonicParsing="false" onAction="#nextButtonOnAction" prefHeight="26.0" prefWidth="66.0" text="Next" />
+            <Label layoutX="145.0" layoutY="248.0" prefHeight="27.0" prefWidth="95.0" text="E-mail :">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="emailTextField" layoutX="241.0" layoutY="248.0" prefHeight="26.0" prefWidth="185.0" promptText="e-mail" />
+            <Label fx:id="invalidphoneno" layoutX="446.0" layoutY="200.0" prefHeight="18.0" prefWidth="126.0" textFill="#ef1010">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
+   </left>
+</BorderPane>
