--- a/src/main/resources/com/example/demo/submit.fxml
+++ b/src/main/resources/com/example/demo/submit.fxml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.SubmitController">
+   <children>
+      <AnchorPane layoutX="-4.0" prefHeight="400.0" prefWidth="191.0" style="-fx-background-color: blue;">
+         <children>
+            <Label layoutX="77.0" layoutY="95.0" />
+            <Label layoutX="6.0" layoutY="113.0" prefHeight="18.0" prefWidth="142.0" />
+         </children>
+      </AnchorPane>
+      <Label alignment="CENTER" layoutX="266.0" layoutY="32.0" prefHeight="18.0" prefWidth="240.0" text="CONFIRMATION" textFill="#d72d2d">
+         <font>
+            <Font size="30.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="283.0" layoutY="98.0" prefHeight="20.0" prefWidth="206.0" text="Yout Ticket has been booked" textFill="#3f7899">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <Button fx:id="cancelButton" layoutX="336.0" layoutY="331.0" mnemonicParsing="false" onAction="#CancelButtonOnAction" text="cancel" />
+      <Label fx:id="nameLabel" layoutX="322.0" layoutY="160.0" prefHeight="18.0" prefWidth="103.0" />
+   </children>
 </AnchorPane>
